# Nebulo

./: LICENSE  README.md  examples.py  examples_Mamdani_TrapezoidalMF.py  examples_Mamdani_TriangularMF.py  examples_Sugeno_TrapezoidalMF.py  examples_Sugeno_TriangularMF.py  pyproject.toml  setup.py
examples/: examples.py
nebulo/: __init__.py  membership.py  rules.py  system.py  utils.py  variables.py
tests/: test_system.py
